--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,15 @@
-
+#DATASOURCE
+spring.datasource.url=jdbc:mysql://sysredcartagena.duckdns.org/pragma?useSSL=false&serverTimezone=UTC&useLegacyDatetimeCode=false
+spring.datasource.username=camiloleal
+spring.datasource.password=C4m1l0
+#MONGO DB
+#spring.data.mongodb.uri : mongodb://74.208.94.78/pragma
+#spring.data.mongodb.database=pragma
+#Dialect Hibernate
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
+# Hibernate ddl auto (create, create-drop, validate, update)
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=update
+#logging.level.org.hibernate.SQL=DEBUG
+#Port server api
+server.port=8000
