--- a/pom.xml
+++ b/pom.xml
@@ -72,6 +72,26 @@
                     </excludes>
                 </configuration>
             </plugin>
+               <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-compiler-plugin</artifactId>
+            <configuration>
+          <source>11</source> <!-- depending on your project -->
+          <target>11</target> <!-- depending on your project -->
+          <annotationProcessorPaths>
+           <path>
+                <groupId>org.projectlombok</groupId>
+                <artifactId>lombok</artifactId>
+            </path>
+            <path>
+              <groupId>org.mapstruct</groupId>
+              <artifactId>mapstruct-processor</artifactId>
+               <version>1.4.2.Final</version>
+            </path>
+            <!-- other annotation processors -->
+          </annotationProcessorPaths>
+        </configuration>
+      </plugin>
         </plugins>
     </build>
 
