--- a/pom.xml
+++ b/pom.xml
@@ -44,7 +44,7 @@
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
-            <optional>true</optional>
+            	<version>1.18.24</version>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -82,6 +82,7 @@
            <path>
                 <groupId>org.projectlombok</groupId>
                 <artifactId>lombok</artifactId>
+                	<version>1.18.24</version>
             </path>
             <path>
               <groupId>org.mapstruct</groupId>
